--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
     <color name="custom_background">#FDFDFD</color>
     <color name="custom_toolbar_background">#F95643</color>
     <color name="custom_toolbar_background_dark">#e05141</color>
-  <color name="material_blue_grey_800">#7a7a7a</color>
+    <color name="material_blue_grey_800">#7a7a7a</color>
+    <color name="black_overlay">#79000000</color>
 </resources>
