--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -58,6 +58,8 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
