--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -34,6 +34,7 @@
 
         <ImageView
             android:id="@+id/movie_image"
+            android:transitionName="movie_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_alignParentTop="true"
