--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,15 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light">
+
+        <!-- enable window content transitions -->
+        <item name="android:windowContentTransitions">true</item>
+
+        <!-- specify enter and exit transitions -->
+        <item name="android:windowEnterTransition">@transition/explode</item>
+        <item name="android:windowExitTransition">@transition/explode</item>
+
+
         <!-- colorPrimary is used for the default action bar background -->
         <item name="colorPrimary">@color/color_primary</item>
 
