--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -51,14 +51,34 @@
             <ImageView
                 android:id="@+id/movie_image"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="350dp"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
                 android:transitionName="movie_image"
                 app:layout_collapseMode="parallax" />
 
+            <RelativeLayout
+                android:id="@+id/movie_info_container"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_gravity="bottom"
+                android:background="@color/white">
+
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/movie_poster"
+                android:layout_width="wrap_content"
+                android:layout_height="120dp"
+                android:layout_gravity="bottom|left"
+                android:layout_marginLeft="10dp"
+
+                />
+
 
         </android.support.design.widget.CollapsingToolbarLayout>
+
+
     </android.support.design.widget.AppBarLayout>
 
 </android.support.design.widget.CoordinatorLayout>
