--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -31,7 +31,6 @@
 
         <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -57,23 +56,7 @@
                 android:transitionName="movie_image"
                 app:layout_collapseMode="parallax" />
 
-            <RelativeLayout
-                android:id="@+id/movie_info_container"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_gravity="bottom"
-                android:background="@color/white">
-
-            </RelativeLayout>
-
-            <ImageView
-                android:id="@+id/movie_poster"
-                android:layout_width="wrap_content"
-                android:layout_height="120dp"
-                android:layout_gravity="bottom|left"
-                android:layout_marginLeft="10dp"
-
-                />
+            <include layout="@layout/movie_detail_info" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
