--- a/app/src/main/res/layout/movie_detail_info.xml
+++ b/app/src/main/res/layout/movie_detail_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/movie_info_container"
     android:layout_width="match_parent"
@@ -9,16 +10,21 @@
 
 
     <View
+        android:id="@+id/bottom_view"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_gravity="bottom"
         android:background="@color/white"></View>
 
-    <ImageView
-        android:id="@+id/movie_poster"
-        android:layout_width="80dp"
-        android:layout_height="120dp"
-        android:layout_gravity="bottom|left"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp" />
+    <!--<ImageView-->
+        <!--android:id="@+id/movie_poster"-->
+        <!--android:layout_width="80dp"-->
+        <!--android:layout_height="120dp"-->
+        <!--android:layout_gravity="bottom|right"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:scaleType="fitStart" />-->
+
+
+
 </FrameLayout>
