--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
   <dimen name="text_container_padding">10dp</dimen>
+  <dimen name="padding_small">5dp</dimen>
 </resources>
