--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,5 +46,11 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+    <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">?android:textColorPrimary</item>
+        <item name="tabBackground">?attr/colorPrimary</item>
+        <item name="tabSelectedTextColor">?android:textColorPrimary</item>
+    </style>
+
 
 </resources>
