--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,6 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?android:attr/colorPrimary"
+    android:elevation="6dp"
     app:layout_collapseMode="parallax"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
