--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,8 +42,9 @@
 
     <style name="AppTheme.TransparentStatusBar" parent="AppTheme">
         <item name="colorPrimary">@android:color/transparent</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
+        <item name="android:toolbarStyle">@style/AppTheme.DetailToolbar</item>
     </style>
 
     <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
@@ -51,6 +52,11 @@
         <item name="tabIndicatorHeight">2dp</item>
         <item name="android:background">?attr/colorPrimary</item>
         <item name="tabSelectedTextColor">?android:textColorPrimary</item>
+    </style>
+
+    <style name="AppTheme.DetailToolbar" parent="Widget.AppCompat.Toolbar">
+
+        <item name="actionMenuTextColor">?attr/colorAccent</item>
     </style>
 
 
