Added transparent status bar feature

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,7 +44,8 @@
         <item name="colorPrimary">@android:color/transparent</item>
         <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
         <!--<item name="android:windowTranslucentStatus">true</item>-->
-        <item name="android:toolbarStyle">@style/AppTheme.DetailToolbar</item>
+        <!--<item name="android:toolbarStyle">@style/AppTheme.DetailToolbar</item>-->
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
@@ -57,6 +58,7 @@
     <style name="AppTheme.DetailToolbar" parent="Widget.AppCompat.Toolbar">
 
         <item name="actionMenuTextColor">?attr/colorAccent</item>
+
     </style>
 
 
