--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout android:id="@+id/coordinator_layout"
-                                                 xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coordinator_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <android.support.design.widget.AppBarLayout
@@ -26,20 +27,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
                 android:layout_alignParentTop="true"
+                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:transitionName="movie_image"
-                app:layout_collapseMode="parallax" android:fitsSystemWindows="true"/>
+                app:layout_collapseMode="parallax" />
 
 
-
-            <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-                                               xmlns:android="http://schemas.android.com/apk/res/android"
-                                               xmlns:app="http://schemas.android.com/apk/res-auto"
-                                               android:layout_width="match_parent"
-                                               android:layout_height="?attr/actionBarSize"
-                                               android:background="?android:attr/colorPrimary"
-                                               app:layout_collapseMode="parallax"
-                                               app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            <android.support.v7.widget.Toolbar
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?android:attr/colorPrimary"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -71,7 +73,7 @@
         app:layout_anchor="@id/recycler_view_reviews"
         app:layout_anchorGravity="bottom|right|end"
         app:pressedTranslationZ="12dp"
-        app:rippleColor="@color/darker_color"/>
+        app:rippleColor="@color/darker_color" />
 
 
 </android.support.design.widget.CoordinatorLayout>
