--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -66,6 +66,18 @@
                 android:text="Medium Text"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/watchOnNetflix"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/watch_on_netflix" />
+            </LinearLayout>
+
         </LinearLayout>
     </RelativeLayout>
 
